# hwy-dispatch

./: .gitignore  CMakeLists.txt  README.md  dynamic_dispatch.cpp  dynamic_dispatch.h  main.cpp
